fix: 以 flexbox sticky footer 取代 main min-height，消除多餘 scrollbar

--- a/assets/css/guide.scss
+++ b/assets/css/guide.scss
@@ -8,9 +8,7 @@ summary.cursor-help {
   cursor: help;
 }
 
-main {
-  min-height: 90vh;
-}
+
 
 .site-footer {
   background: var(--backgroundColorLayer1);
